Revert "refactor(core): Remove RxJava from ExecutionRepository interface" (#2228)