@@ -31,6 +31,7 @@ import org.springframework.stereotype.Component;
 import rx.Observable;
 import rx.Scheduler;
 import rx.Subscription;
+import rx.functions.Func1;
 import rx.schedulers.Schedulers;
 
 import javax.annotation.PreDestroy;
@@ -39,13 +40,9 @@ import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
-import java.util.function.Function;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static com.netflix.spinnaker.orca.pipeline.model.Execution.ExecutionType.PIPELINE;
-import static com.netflix.spinnaker.orca.pipeline.persistence.ExecutionRepository.IterableUtil.toStream;
 
 // TODO rz - Remove redis know-how and move back into orca-core
 @Component
@@ -59,9 +56,9 @@ public class OldPipelineCleanupPollingNotificationAgent implements ApplicationLi
   private Scheduler scheduler = Schedulers.io();
   private Subscription subscription;
 
-  private Predicate<Execution> filter = new Predicate<Execution>() {
+  private Func1<Execution, Boolean> filter = new Func1<Execution, Boolean>() {
     @Override
-    public boolean test(Execution execution) {
+    public Boolean call(Execution execution) {
       if (!COMPLETED_STATUSES.contains(execution.getStatus().toString())) {
         return false;
       }
@@ -70,7 +67,7 @@ public class OldPipelineCleanupPollingNotificationAgent implements ApplicationLi
     }
   };
 
-  private Function<Execution, PipelineExecutionDetails> mapper = execution -> new PipelineExecutionDetails(
+  private Func1<Execution, PipelineExecutionDetails> mapper = execution -> new PipelineExecutionDetails(
     execution.getId(),
     execution.getApplication(),
     execution.getPipelineConfigId() == null ? "ungrouped" : execution.getPipelineConfigId(),
@@ -141,7 +138,7 @@ public class OldPipelineCleanupPollingNotificationAgent implements ApplicationLi
 
       applications.forEach(app -> {
         log.debug("Cleaning up " + app);
-        cleanupApp(toStream(executionRepository.retrievePipelinesForApplication(app)));
+        cleanupApp(executionRepository.retrievePipelinesForApplication(app));
       });
 
     } catch (Exception e) {
@@ -149,8 +146,8 @@ public class OldPipelineCleanupPollingNotificationAgent implements ApplicationLi
     }
   }
 
-  private void cleanupApp(Stream<Execution> executions) {
-    List<PipelineExecutionDetails> allPipelines = executions.filter(filter).map(mapper).collect(Collectors.toList());
+  private void cleanupApp(Observable<Execution> observable) {
+    List<PipelineExecutionDetails> allPipelines = observable.filter(filter).map(mapper).toList().toBlocking().single();
 
     Map<String, List<PipelineExecutionDetails>> groupedPipelines = new HashMap<>();
     allPipelines.forEach(p -> {
